<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ingredients.IngredientsActivity"
    tools:showIn="@layout/activity_recipe_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selected_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:text="@string/selected_recipe"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:text="@string/got_all_the_ingredients"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_ingredients_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:nestedScrollingEnabled="false">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/ingredients_done_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/start_cooking"
            android:textColor="@color/colorIcons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/p_s_you_can_still_view_the_steps_for_cooking_if_you_don_t_have_all_the_ingredients"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>