<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_anim"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recipe_video_thumbnail"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.5"
            android:alpha="0.9"
            android:contentDescription="@string/video_thumbnail"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/step_short_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:gravity="center"
            android:minHeight="100dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:text="@string/recipe_short_description"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/step_long_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:text="@string/recipe_long_description"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>
</android.support.v7.widget.CardView>